# soap

./: README.md  fit_projector.py  get_models.py  main_knn.py  main_salient.py  notebook.ipynb  pyproject.toml
salient/: bilateral.py  metrics.py  ncut.py  util.py
soap/: __init__.py  soap.py  welford.py
soap/synth/: __init__.py  gradient.py  pinknoise.py  proc.py  synthesizer.py
synth/: dataset.py  dct.py
