[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "soap"
version = "0.1.0"
description = "Semantically Orthogonal Artifact Projection"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "einops>=0.8.1",
    "jaxtyping>=0.3.2",
    "matplotlib>=3.10.5",
    "omegaconf>=2.3.0",
    "scikit-learn>=1.4.2",
    "timm>=1.0.22",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "tqdm>=4.66.5",
]

[tool.hatch.build.targets.wheel]
packages = ["soap", "salient"]
